# qt-music

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
